# xgboost-rust

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml
examples/: advanced_usage.rs  basic_usage.rs
src/: error.rs  model.rs
