[package]
name = "xgboost-rust"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for XGBoost, a gradient boosting library for machine learning. Downloads XGBoost binaries at build time for cross-platform compatibility."
license = "Apache-2.0"
keywords = ["machine-learning", "gradient-boosting", "xgboost", "ml"]
categories = ["science"]
readme = "README.md"
repository = "https://github.com/aryehlev/xgboost-rust"
homepage = "https://github.com/aryehlev/xgboost-rust"
rust-version = "1.70"

[build-dependencies]
bindgen = "0.72.0"
ureq = "2.0"
zip = "0.6"
sha2 = "0.10"

[features]
default = []
gpu = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"
